# hydro

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  COORD_CRITERION_TODO.md  Cargo.toml  FINAL_STATUS.md  HYDRO_BUG_REPORT.md  JJ_PR_DESIGN.md  PLAN.md  PR_COMMENTS.md  PR_COMMENTS_RESOLVED.md  PR_DESCRIPTION.md  PR_REVIEW.md  PR_REVIEW.md.old  README.md  RELEASING.md  STILL_TO_MERGE.md  acceptor0.data.folded  acceptor1.data.folded  acceptor2.data.folded  build_docs.bash  cargo-sim  client0.data.folded  clippy.toml  demux_crash_repro.rs  embedded_results.txt  example_chat.json  example_chat_new.json  example_chat_semantic.json  fresh_paxos.json  kvs_zoo_hydro_main.patch  precheck.bash  proposer0.data.folded  proposer1.perf.data  replica0.data.folded  replica1.data.folded  rust-toolchain.toml  rustfmt.toml  (+10 more)
async_ssh2_russh/: Cargo.toml  README.md  rustfmt.toml
async_ssh2_russh/src/: lib.rs  promise.rs  read_stream.rs  sftp.rs
dfir_baseline/: ADMISSION_CONTROL_REPORT.md  BASELINE_RESULTS.md  CHECKPOINT_BASELINE_COMPLETE.md  Cargo.toml  RETRY_LOGIC_COMPLETE.md  TCP_UNBOUNDED_ANALYSIS.md  example_baseline_config.json  kill_servers.sh  run_7way_comparison.sh
dfir_baseline/scripts/: plot_comparison.py
dfir_baseline/src/: lib.rs  metrics.rs  pipeline.rs
dfir_baseline/tests/: admission_control_prevents_collapse.rs  admission_control_test.rs  baseline_stability.rs  basic_request_response.rs  metastability_demo.rs  retry_mechanism.rs
dfir_lang/: CHANGELOG.md  Cargo.toml  build.rs
dfir_lang/src/: diagnostic.rs  graph_ids.rs  lib.rs  parse.rs  pretty_span.rs  process_singletons.rs  union_find.rs
dfir_macro/: CHANGELOG.md  Cargo.toml  build.rs
dfir_macro/src/: lib.rs
dfir_pipes/: CHANGELOG.md  Cargo.toml
dfir_pipes/src/: accumulator.rs  chain.rs  collect.rs  cross_singleton.rs  either.rs  empty.rs  enumerate.rs  filter.rs  filter_map.rs  flat_map.rs  flatten.rs  for_each.rs  from_fn.rs  fuse.rs  inspect.rs  iter.rs  lib.rs  map.rs  merge.rs  next.rs  once.rs  pending.rs  poll_fn.rs  pull_fn.rs  repeat.rs  scan.rs  send_sink.rs  skip.rs  skip_while.rs  source_stream.rs  stream.rs  stream_ready.rs  symmetric_hash_join.rs  take.rs  take_while.rs  test_utils.rs  zip.rs  zip_longest.rs
example_test/: CHANGELOG.md  Cargo.toml
example_test/src/: lib.rs
hydro_aws/: Cargo.toml
hydro_aws/examples/: aws_sqs.rs
hydro_aws/src/: lib.rs  sqs.rs
hydro_build_utils/: CHANGELOG.md  Cargo.toml
hydro_build_utils/src/: lib.rs
hydro_concurrent_cargo/: CHANGELOG.md  Cargo.toml
hydro_concurrent_cargo/src/: final_rustc.rs  lib.rs
hydro_lang/: CHANGELOG.md  Cargo.toml  build.rs  test-features.bash
hydro_lang/src/: .ir.rs.pending-snap  backtrace.rs  boundedness.rs  consistency.rs  cycle.rs  deploy_runtime.rs  embedded.rs  forward_handle.rs  graph_util.rs  handoff_ref.rs  ir.rs  keyed_optional.rs  keyed_singleton.rs  keyed_stream.rs  lib.rs  manual_expr.rs  nondet.rs  optional.rs  runtime_context.rs  singleton.rs  singleton_ref.rs  stream.rs  telemetry.rs  test_util.rs  unsafety.rs
hydro_lang/tests/: collection_type_metadata.rs  collection_type_metadata_more.rs  compile_fail.rs  sim_fuzzer.rs  test_metadata_basic.rs  trybuild_host_api.rs
hydro_optimize/: Cargo.toml  build.rs
hydro_optimize/examples/: benchmark_paxos.rs  partition_simple_cluster.rs  partition_two_pc.rs
hydro_optimize/src/: debug.rs  decouple_analysis.rs  decoupler.rs  deploy.rs  deploy_and_analyze.rs  inject_profiling.rs  lib.rs  parse_results.rs  partition_analysis.rs  partition_node_analysis.rs  partition_syn_analysis.rs  partitioner.rs  repair.rs  rewrites.rs
hydro_std/: CHANGELOG.md  Cargo.toml  build.rs
hydro_std/src/: bench_client.rs  compartmentalize.rs  lib.rs  membership.rs  quorum.rs  request_response.rs
hydro_test/: Cargo.toml  build.rs
hydro_test/benches/: paxos_bench.rs
hydro_test/examples/: aws_sqs.rs  benchmark_paxos.rs  chat.rs  compartmentalized_paxos.rs  compute_pi.rs  counter.rs  decouple_compute_pi.rs  distributed_echo.rs  distributed_echo_aws.rs  distributed_echo_clustered_containerized.rs  distributed_echo_containerized.rs  distributed_rendezvous_hashing.rs  echo.rs  echo_server.rs  first_ten_distributed.rs  http_counter.rs  http_hello.rs  kafka.rs  maelstrom_broadcast.rs  maelstrom_echo.rs  map_reduce.rs  partition_simple_cluster.rs  partition_two_pc.rs  paxos.rs  paxos_log.rs  perf_compute_pi.rs  perf_paxos.rs  rendezvous_hashing.rs  sidecar_bidi.rs  simple_cluster.rs  two_pc.rs  websocket_chat.rs  websocket_echo.rs  websocket_test_client.html
hydro_test/src/: coordination.rs  counter.rs  graph_util.rs  lib.rs  test_util.rs
hydro_test_template/: Cargo.toml
hydro_test_template/examples/: echo_local.rs
hydro_transparent_replicate/: Cargo.toml
hydro_transparent_replicate/examples/: demo_1000_keys.rs  demo_1000_keys_rusqlite.rs  demo_failover.rs  ec2_autotest.rs  ec2_demo2.rs  ec2_demo2_fjall.rs  ec2_demo2_rusqlite.rs  ec2_failover.rs
hydro_transparent_replicate/scripts/: ec2_cleanup.sh
hydro_transparent_replicate/src/: applier.rs  client.rs  config.rs  lib.rs  messages.rs  protocol.rs  service_trait.rs
hydro_transparent_replicate/tests/: backend_properties.rs  coordinator_fd_test.rs  ec2_logic_test.rs  failover_primary_test.rs  failover_test.rs  integration_failover.rs  local_pipeline_test.rs  no_spurious_view_change_test.rs  protocol_properties.rs  replicate_service_test.rs  sequential_kill_long_wait_test.rs  sim_dataflow.rs  sim_redb_on_hydro.rs  systematic_kill_test.rs  view_maximality_test.rs
jj-pr/: Cargo.toml
jj-pr/src/: cli.rs  gh.rs  jj.rs  main.rs  pr_dag.rs  tests.rs
kvs/: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  ISSUES.md  PLAN.md  README.md  build.rs  distributed-rendezvous-hashing.txt  ff-merge-branch.sh  git-all.sh
kvs/cdk/: .gitignore  README.md  build.sh  (+5 more)
lattices/: CHANGELOG.md  Cargo.toml  README.md  build.rs
lattices_macro/: CHANGELOG.md  Cargo.toml
pusherator/: Cargo.toml
scratch_borrow_tests/: Cargo.toml
sinktools/: CHANGELOG.md  Cargo.toml  README.md
variadics/: CHANGELOG.md  Cargo.toml
(+144277 files in other folders)
