[package]
name = "async_ssh2_russh"
publish = true
version = "0.1.0"
documentation = "https://docs.rs/async_ssh2_russh/"
description = "Lighweight async ssh2 client, wrapping russh."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
sftp = [ "russh-sftp" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
russh = { git = "https://github.com/Eugeny/russh.git", rev = "7b093027fb4ca0a8865ee0d85d5ed160f2097e3a" }
russh-sftp = { optional = true, git = "https://github.com/MrAliSalehi/russh-sftp.git", rev = "c5958a688dd5bfdb3f6615ea650aa47d15ff4fe3" }
thiserror = ">=1.0.30, <3.0.0" # We do not depend on the breaking changed behavior: https://github.com/dtolnay/thiserror/releases/tag/2.0.0
tokio = "1.29.0"
tracing = "0.1.0"
