[package]
name = "async_ssh2_russh"
publish = true
version = "0.1.0"
documentation = "https://docs.rs/async_ssh2_russh/"
description = "Lighweight async ssh2 client, wrapping russh."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
sftp = [ "russh-sftp" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
russh = "0.52.0-beta.1"
russh-sftp = { optional = true, version = "2.1.0" }
thiserror = ">=1.0.30, <3.0.0" # We do not depend on the breaking changed behavior: https://github.com/dtolnay/thiserror/releases/tag/2.0.0
tokio = "1.29.0"
tracing = "0.1.0"
