[package]
name = "dfir_baseline"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "plot_metrics"
path = "src/bin/plot_metrics.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dfir_rs = { path = "../dfir_rs" }
anyhow = "1.0"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.8"
