[package]
name = "dfir_baseline"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "server_unbounded"
path = "src/bin/server_unbounded.rs"

[[bin]]
name = "server_tcp_unbounded"
path = "src/bin/server_tcp_unbounded.rs"

[[bin]]
name = "server_tcp_blocking"
path = "src/bin/server_tcp_blocking.rs"

[[bin]]
name = "server_single_stage"
path = "src/bin/server_single_stage.rs"

[[bin]]
name = "server_multistage_admission"
path = "src/bin/server_multistage_admission.rs"

[[bin]]
name = "client_quiet"
path = "src/bin/client_quiet.rs"

[[bin]]
name = "client_rude"
path = "src/bin/client_rude.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dfir_rs = { path = "../dfir_rs" }
anyhow = "1.0"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.8"
