[package]
name = "dfir_macro"
publish = true
version = "0.15.0"
documentation = "https://docs.rs/dfir_macro/"
description = "Macro for using Hydro's Data Flow Intermediate Representation (DFIR)."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
# Note: If we ever compile this proc macro crate to WASM (e.g., if we are
# building on a WASM host), we may need to turn diagnostics off for WASM if
# proc_macro2 still does not support WASM.
dfir_lang = { path = "../dfir_lang", version = "^0.15.0" }
proc-macro2 = "1.0.95"
proc-macro-crate = "3.3"
quote = "1.0.35"
syn = { version = "2.0.46", features = [ "parsing", "extra-traits" ] }

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.0.1", optional = true }

[build-dependencies]
dfir_lang = { path = "../dfir_lang", version = "^0.15.0" }
itertools = "0.13.0"
quote = "1.0.35"
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.0.1" }
