[package]
name = "dfir_pipes"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "futures-core/std", "futures-sink/std", "rustc-hash", "smallvec"]
alloc = ["futures-core/alloc", "futures-sink/alloc"]

[dependencies]
futures-core = { version = "0.3.0", default-features = false }
futures-sink = { version = "0.3.0", default-features = false }
itertools = { version = "0.14", default-features = false }
pin-project-lite = "0.2.16"
rustc-hash = { version = "2.0.0", optional = true }
sealed = "0.6.0"
smallvec = { version = "1.0", optional = true }

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { path = "../hydro_build_utils", optional = true }

[build-dependencies]
hydro_build_utils = { path = "../hydro_build_utils" }

[lints]
workspace = true
