[package]
name = "dfir_pipes"
publish = true
version = "0.1.0-alpha.0"
documentation = "https://docs.rs/dfir_pipes/"
description = "Pipes are a generalization of iterators/streams/sinks used by dfir_rs."
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["std", "variadics", "lattices"]
std = ["alloc", "futures-core/std", "futures-sink/std", "rustc-hash", "smallvec", "variadics?/std"]
alloc = ["futures-core/alloc", "futures-sink/alloc"]
variadics = ["dep:variadics"]
lattices = ["dep:lattices"]

[dependencies]
futures-core = { version = "0.3.0", default-features = false }
futures-sink = { version = "0.3.0", default-features = false }
itertools = { version = "0.14", default-features = false }
pin-project-lite = "0.2.16"
rustc-hash = { version = "2.0.0", optional = true }
sealed = "0.6.0"
smallvec = { version = "1.0", optional = true }
variadics = { optional = true, path = "../variadics", default-features = false, version = "^1.0.0-alpha.0" }
lattices = { optional = true, path = "../lattices", default-features = false, version = "^0.8.0-alpha.0" } # TODO(mingwei): feature-gate std/alloc

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { version = "^0.1.1-alpha.0", path = "../hydro_build_utils", optional = true }

[build-dependencies]
hydro_build_utils = { version = "^0.1.1-alpha.0", path = "../hydro_build_utils" }

[dev-dependencies]
futures-util = { version = "0.3.0", default-features = false, features = ["alloc"] }

[lints]
workspace = true
