[package]
name = "example_test"
publish = true
version = "0.0.1"
documentation = "https://docs.rs/example_test/"
description = "Test `cargo example` code."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ctor = { version = "1", default-features = false, features = ["std", "priority"] }
regex = "1.10.4"
log = "0.4"

[lints]
workspace = true
