[package]
name = "hydro_aws"
publish = true
version = "0.1.0"
documentation = "https://docs.rs/hydro_aws/"
description = "AWS integrations for Hydro"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = []
stageleft_macro_entrypoint = ["hydro_lang/stageleft_macro_entrypoint"]
sqs = ["dep:aws-sdk-sqs"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.1" }
stageleft.workspace = true
ctor = "0.2.9"
aws-config = { version = "1", features = ["behavior-version-latest", "credentials-login"] }
aws-sdk-sqs = { version = "1", optional = true }
futures-util = { version = "0.3.0", default-features = false, features = ["alloc"] }

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", optional = true }

[[example]]
name = "aws_sqs"
required-features = ["sqs"]

[build-dependencies]
stageleft_tool.workspace = true

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.17.0-alpha.0" }
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.1", features = ["deploy", "viz"] }
tokio = { version = "1.29.0", features = ["full"] }
