[package]
name = "hydro_build_utils"
publish = true
version = "0.0.1"
description = "build and test utils for hydro"
documentation = "https://docs.rs/hydro_build_utils/"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
insta = ["dep:insta"]

[dependencies]
rustc_version = "0.4.0"
insta = { version = "1.39", optional = true }
