[package]
name = "hydro_build_utils"
publish = true
version = "0.1.0"
description = "build and test utils for hydro"
documentation = "https://docs.rs/hydro_build_utils/"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
insta = ["dep:insta"]
trybuild = ["dep:trybuild"]

[dependencies]
rustc_version = "0.4.0"
insta = { version = "1.39", optional = true }
trybuild = { version = "1", optional = true }
