[package]
name = "hydro_lang"
publish = true
version = "0.14.0"
documentation = "https://docs.rs/hydro_lang/"
description = "Choreographic programming  for Hydro, built on DFIR"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = []
viz = [
    "build",
    "dep:auto_impl",
    "dep:clap",
    "dep:itertools",
    "dep:webbrowser", 
    "dep:data-encoding",
    "dep:serde_json",
    "dep:flate2",
]
deploy = [
    "build",
    "dep:hydro_deploy",
    "dep:prettyplease",
    "dep:trybuild-internals-api",
    "dep:toml",
    "dep:sha2",
    "dep:stageleft_tool",
    "dep:nameof",
]
build = ["dep:dfir_lang", "dep:backtrace", "dep:ctor"]
runtime_measure = ["dep:chrono", "dep:procfs"]
runtime_support = ["dep:dfir_rs", "dfir_rs/deploy_integration"]
dfir_context = ["dep:dfir_rs"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
backtrace = { version = "0.3", optional = true }
bytes = { version = "1.1.0", features = ["serde"] }
bincode = "1.3.1"
clap = { version = "4.0", features = ["derive"], optional = true }
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.14.0", optional = true }
hydro_deploy_integration = { path = "../hydro_deploy/hydro_deploy_integration", version = "^0.14.0" }
dfir_rs = { path = "../dfir_rs", version = "^0.14.0", default-features = false, optional = true }
dfir_lang = { path = "../dfir_lang", version = "^0.14.0", optional = true }
futures = "0.3.0"
match_box = "0.0.2"
nameof = { version = "1.0.0", optional = true }
prettyplease = { version = "0.2.0", features = ["verbatim"], optional = true }
proc-macro-crate = "3.3"
proc-macro2 = "1.0.95"
quote = "1.0.35"
sealed = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = { version = "0.10.0", optional = true }
stageleft.workspace = true
stageleft_tool = { workspace = true, optional = true }
syn = { version = "2.0.46", features = [
    "parsing",
    "extra-traits",
    "visit-mut",
    "visit",
] }
tokio = "1.29.0"
tokio-util = { version = "0.7.5", features = [ "codec" ] }
tokio-stream = { version = "0.1.3", default-features = false, features = [
    "time",
] }
toml = { version = "0.8.0", optional = true }
trybuild-internals-api = { version = "1.0.99", optional = true }
ctor = { version = "0.2", optional = true }

# Optional dependencies for graph rendering (now behind viz feature)
auto_impl = { version = "1.2.0", optional = true }
itertools = { version = "0.13.0", optional = true }
webbrowser = { version = "1.0.2", optional = true }
data-encoding = { version = "2.6.0", optional = true }
serde_json = { version = "1.0.132", optional = true }
flate2 = { version = "1.0", optional = true }

# TODO(mingwei): remove once file locking is stable: https://github.com/rust-lang/rust/issues/130994
# build.rs `println!("cargo:rustc-cfg=nightly")` doesn't gate this (happens
# after dependency resolution), but this doesn't hurt to have.
[target.'cfg(not(nightly))'.dependencies]
fs2 = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
chrono = { version = "0.4.39", optional = true }
procfs = { version = "0.17.0", optional = true }

[build-dependencies]
stageleft_tool.workspace = true
rustc_version = "0.4.0"

[dev-dependencies]
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.14.0" }
ctor = "0.2"
insta = "1.39"
tokio-test = "0.4.4"
trybuild = "1"
