[package]
name = "hydro_test"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:tokio-util", "dep:tokio-stream", "hydro_lang/tokio", "hydro_lang/telemetry_emf", "hydro_std/tokio"]
test_docker = ["hydro_lang/docker_deploy"]
test_ecs = ["hydro_lang/ecs_deploy"]
maelstrom = ["hydro_lang/maelstrom"]
stageleft_macro_entrypoint = ["hydro_lang/stageleft_macro_entrypoint"]

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.3", default-features = false }
hydro_std = { path = "../hydro_std", version = "^0.17.0-alpha.3", default-features = false }
stageleft.workspace = true
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = { version = "1.29.0", optional = true }
tokio-stream = { version = "0.1.3", default-features = false, optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures = "0.3.0"
bytes = "1.1.0"

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
example_test = { path = "../example_test", version = "^0.0.1", optional = true }
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", optional = true }

[build-dependencies]
stageleft_tool.workspace = true
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0" }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
dfir_lang = { path = "../dfir_lang", version = "^0.17.0-alpha.2" }
example_test = { path = "../example_test", version = "^0.0.1" }
futures = "0.3.0"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.17.0-alpha.2" }
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.3", features = [
    "deploy",
    "maelstrom",
    "sim",
    "viz",
] }
include_mdtests = { path = "../include_mdtests", version = "^0.0.0" }
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", features = ["insta"] }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-util = { version = "0.7.5", features = [ "codec" ] }
tokio-test = "0.4.4"
dfir_rs = { path = "../dfir_rs", version = "^0.17.0-alpha.3", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bench]]
name = "paxos_bench"
required-features = ["tokio"]
harness = false

[[example]]
name = "paxos"
required-features = ["tokio"]

[[example]]
name = "paxos_log"
required-features = ["tokio"]

[[example]]
name = "compartmentalized_paxos"
required-features = ["tokio"]

[[example]]
name = "two_pc"
required-features = ["tokio"]

[[example]]
name = "first_ten_distributed"
required-features = ["tokio"]

[[example]]
name = "compute_pi"
required-features = ["tokio"]

[[example]]
name = "perf_compute_pi"
required-features = ["tokio"]

[[example]]
name = "echo"
required-features = ["tokio"]

[[example]]
name = "distributed_echo"
required-features = ["tokio"]

[[example]]
name = "sidecar_bidi"
required-features = ["tokio"]
