[package]
name = "hydro_test"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[features]
test_docker = ["hydro_lang/docker_deploy"]
test_ecs = ["hydro_lang/ecs_deploy"]
maelstrom = ["hydro_lang/maelstrom"]
stageleft_macro_entrypoint = ["hydro_lang/stageleft_macro_entrypoint"]

[dependencies]
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.3" }
hydro_std = { path = "../hydro_std", version = "^0.17.0-alpha.3" }
stageleft.workspace = true
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"
tokio-stream = { version = "0.1.3", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3.0"
bytes = "1.1.0"

# coax cargo-smart-release into publishing this crate.
# https://github.com/hydro-project/hydro/blob/main/RELEASING.md#addendum-adding-new-crates
# https://github.com/GitoxideLabs/cargo-smart-release/issues/36
example_test = { path = "../example_test", version = "^0.0.1", optional = true }
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", optional = true }

[build-dependencies]
stageleft_tool.workspace = true
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0" }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
dfir_lang = { path = "../dfir_lang", version = "^0.17.0-alpha.2" }
example_test = { path = "../example_test", version = "^0.0.1" }
futures = "0.3.0"
hydro_deploy = { path = "../hydro_deploy/core", version = "^0.17.0-alpha.2" }
hydro_lang = { path = "../hydro_lang", version = "^0.17.0-alpha.3", features = [
    "deploy",
    "maelstrom",
    "sim",
    "viz",
] }
include_mdtests = { path = "../include_mdtests", version = "^0.0.0" }
hydro_build_utils = { path = "../hydro_build_utils", version = "^0.1.1-alpha.0", features = ["insta"] }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-test = "0.4.4"
dfir_rs = { path = "../dfir_rs", version = "^0.17.0-alpha.3", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[bench]]
name = "paxos_bench"
harness = false
