[package]
name = "jj-pr"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "jj-pr"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
renderdag = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
